<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerObject"
            type="com.example.visitravel.fragments.register.RegisterFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".activity.login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/component_background"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/header_text_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="48dp"
            android:text="@string/sign_up_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/regular_text_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:text="@string/please_fill_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            app:helperText="@string/required"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/component_background"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:maxLength="16"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/addEditBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_button"
            android:onClick="@{() -> registerObject.onBackButtonClick()}"
            android:src="@drawable/icon_back_black_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/icon_back_black_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            style="@style/button_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> registerObject.registerButtonClick(signUpEmailEditText.getText().toString(), signUpPasswordEditText.getText().toString())}"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
            app:layout_constraintStart_toStartOf="@+id/signUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        <TextView
            android:id="@+id/textView4"
            style="@style/regular_text_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:text="@string/already_have_account"
            app:layout_constraintStart_toStartOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <TextView
            android:id="@+id/textView5"
            style="@style/regular_orange_text_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/signUpButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>