<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="forgotObject"
            type="com.example.visitravel.fragments.forgotpassword.ForgotPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".fragments.forgotpassword.ForgotPasswordFragment">

        <ImageButton
            android:id="@+id/addEditBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_button"
            android:onClick="@{() -> forgotObject.onBackButtonClick()}"
            android:src="@drawable/icon_back_black_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/icon_back_black_24" />

        <TextView
            android:id="@+id/textView6"
            style="@style/header_text_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="32dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="@style/regular_text_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/enter_to_reset_password"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/component_background"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            style="@style/button_styles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{()-> forgotObject.onResetPasswordButtonClick(forgotEmailEditText.getText().toString())}"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="@+id/forgotEmail"
            app:layout_constraintStart_toStartOf="@+id/forgotEmail"
            app:layout_constraintTop_toBottomOf="@+id/forgotEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>